syntax = "proto3";
package ant_proto;

import "entity.proto";
import "hardware.proto";

message EngineState {
    EntityManager entity_manager = 1;
    SoftwareManager software_manger = 2;
    HardwareManager hardware_manager =3;
}



